<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cepri.demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time"/>

        <Button
            android:id="@+id/btn_add_apn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_apn"/>

        <Button
            android:id="@+id/btn_delete_apn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_apn"/>

        <Button
            android:id="@+id/btn_get_current_apn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_current_apn"/>

        <Button
            android:id="@+id/btn_set_default_apn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_default_apn"/>

        <Button
            android:id="@+id/btn_get_all_apn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_all_apn"/>

        <Button
            android:id="@+id/btn_get_device_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_device_model"/>

        <Button
            android:id="@+id/btn_get_device_sn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_device_sn"/>

        <Button
            android:id="@+id/btn_get_version_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_version_name"/>

        <Button
            android:id="@+id/btn_get_hardware_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hardware_name"/>

        <Button
            android:id="@+id/btn_get_production_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_production_date"/>

        <Button
            android:id="@+id/btn_set_usb_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_usb_mode"/>

        <Button
            android:id="@+id/btn_get_usb_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_usb_mode"/>

        <Button
            android:id="@+id/btn_os_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_update"/>

        <Button
            android:id="@+id/btn_os_verify_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_verify_percent"/>

        <Button
            android:id="@+id/btn_get_service_version_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_version_name"/>

        <Button
            android:id="@+id/btn_set_home_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_home_enable"/>

        <Button
            android:id="@+id/btn_get_home_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_home_enable"/>

        <Button
            android:id="@+id/btn_set_status_bar_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_status_bar_enable"/>

    </LinearLayout>

</ScrollView>
